# Vigitia-HalconTracking

./: README.md
example_files/: state.json
example_files/BlueHouse/: SearchRegion.hobj  ShapeModel_0.sm  ShapeModel_1.sm  ShapeModel_2.sm  ShapeModel_3.sm  TableRegion.hobj  config.json
example_files/Flower/: SearchRegion.hobj  ShapeModel_0.sm  ShapeModel_1.sm  config.json
example_files/Pylon/: SearchRegion.hobj  ShapeModel_0.sm  ShapeModel_1.sm  config.json
example_files/Truck/: SearchRegion.hobj  ShapeModel_0.sm  ShapeModel_1.sm  ShapeModel_2.sm  ShapeModel_3.sm  ShapeModel_4.sm  ShapeModel_5.sm  ShapeModel_6.sm  ShapeModel_7.sm  config.json
halcon_tracking/: CMakeLists.txt  package.xml
halcon_tracking/src/: ImGuiFont.h  ShapeModel.cpp  ShapeModel.h  SoundPlayer.cpp  SoundPlayer.h  main.cpp  texture.h
halcon_tracking/src/3rd/imgui/: CMakeLists.txt
halcon_tracking/src/3rd/imgui_filedialog/: CMakeLists.txt
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: CircleProjection.msg  CircleProjections.msg  Projection.msg
interfaces/srv/: ChangeProjection.srv
launch/: halcon.launch.py
